<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/default_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_47"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15">

        <TextView
            android:id="@+id/lib_popup_hot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/lib_selector_screen"
            android:gravity="center"
            android:text="@string/lib_hot_product"
            android:textColor="@color/lib_selector_screen_text_color"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/lib_popup_credit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/lib_selector_screen"
            android:gravity="center"
            android:text="@string/lib_credit_loan"
            android:textColor="@color/lib_selector_screen_text_color"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/lib_popup_large"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/lib_selector_screen"
            android:gravity="center"
            android:text="@string/lib_large_loan"
            android:textColor="@color/lib_selector_screen_text_color"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:id="@+id/lib_popup_wage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/lib_selector_screen"
            android:gravity="center"
            android:text="@string/lib_wage_loan"
            android:textColor="@color/lib_selector_screen_text_color"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/lib_selector_screen"
            android:gravity="center"
            android:text="@string/lib_less_than_two_thousand"
            android:textColor="@color/gray_6"
            android:textSize="@dimen/text_size_12"
            android:visibility="invisible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/lib_selector_screen"
            android:gravity="center"
            android:text="@string/lib_two_thousand_ten_thousand"
            android:textColor="@color/gray_6"
            android:textSize="@dimen/text_size_12"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lib_popup_type_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lib_ic_transparent"
        android:orientation="vertical"/>
</LinearLayout>