<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lib_popup_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_17"
        android:text="@string/lib_take_photo"
        android:textColor="@color/gray_3"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/default_bg"/>

    <TextView
        android:id="@+id/lib_popup_choose_form_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_17"
        android:text="@string/lib_choose_form_storage"
        android:textColor="@color/gray_3"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/default_bg"/>

    <TextView
        android:id="@+id/lib_popup_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_17"
        android:text="@string/lib_cancel"
        android:textColor="@color/gray_3"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>