<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/lib_bg_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lib_update_apk_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/lib_version_update"
        android:textColor="@color/gray_3"
        android:textSize="@dimen/text_size_19" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/default_bg" />

    <TextView
        android:id="@+id/lib_update_apk_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/lib_version_update_content"
        android:textColor="@color/gray_6"
        android:textSize="@dimen/text_size_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/default_bg" />

    <TextView
        android:id="@+id/lib_update_apk_sure"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/lib_sure"
        android:textColor="@color/default_color"
        android:textSize="@dimen/text_size_17" />

</LinearLayout>